--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   <div class="fourthinfo">
     <div class="first">
       <img src="images/logo.svg" alt="Company Logo">
-      <img class="icon phone" src="images/Phone.png" alt="Phone Logo">
+      <img class="icon phone" src="images/icon-phone.svg" alt="Phone Logo">
       <p>Phone: +1-543-123-4567</p>
-      <img class="icon" src="images/Gmail.png" alt="Gmail Link">
+      <img class="icon emailico" src="images/icon-email.svg" alt="Gmail Link">
       <p>example@fylo.com</p>
     </div>
     <div class="second">
