--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
   <div class="fourthinfo">
     <div class="first">
-      <img src="images/logo.svg" alt="Company Logo">
+      <img class="invert" src="images/logo.svg" alt="Company Logo">
       <img class="icon phone" src="images/icon-phone.svg" alt="Phone Logo">
       <p>Phone: +1-543-123-4567</p>
       <img class="icon emailico" src="images/icon-email.svg" alt="Gmail Link">
@@ -92,9 +92,9 @@
 
     </div>
     <div class="fourth">
-      <img src="images/Facebook.png" alt="Facebook Icon">
-      <img src="images/Twitter.png" alt="Twitter Icon">
-      <img src="images/Instagram.png" alt="Insta Icon">
+      <img class="invert" src="images/Facebook.png" alt="Facebook Icon">
+      <img class="invert" src="images/Twitter.png" alt="Twitter Icon">
+      <img class="invert" src="images/Instagram.png" alt="Insta Icon">
     </div>
   </div>
 
